fixed warning and error icons, fixed activty refetch bug, fixed z-index on popup arrows and new activity button

--- a/src/css/components/labbook/branchMenu.scss
+++ b/src/css/components/labbook/branchMenu.scss
@@ -186,7 +186,7 @@
 }
 
 .BranchMenu__menu-arrow {
-  z-index: index($elements, popup);
+  z-index: index($elements, popup) + 1;
   position: absolute;
   top: 25px;
   right: 16px;
